--- a/SisMaper/Views/Style/Style.xaml
+++ b/SisMaper/Views/Style/Style.xaml
@@ -2,7 +2,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:templates="clr-namespace:SisMaper.Views.Templates"
-    xmlns:dialogs="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     xmlns:tools="clr-namespace:SisMaper.Tools">
     <Style
         x:Key="FocusVisualButton">
@@ -20,6 +19,10 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <tools:NullToVisibility
+        IfNull="{x:Static Visibility.Collapsed}"
+        IfNotNull="{x:Static Visibility.Visible}"
+        x:Key="NullToVisibilityConverter" />
     <tools:DecimalToRealString
         x:Key="DecimalToRealString" />
     <tools:PedidoStatusToBoolean
@@ -74,6 +77,17 @@
         <Setter
             Property="TextAlignment"
             Value="Right" />
+    </Style>
+    <Style
+        x:Key="SisMaper.TextBox"
+        TargetType="{x:Type TextBox}"
+        BasedOn="{StaticResource MahApps.Styles.TextBox}">
+        <Setter
+            Property="FontSize"
+            Value="16" />
+        <Setter
+            Property="Height"
+            Value="32" />
     </Style>
     <Style
         x:Key="LoginButtonStyle"
