Fix errors in Pedido and EscolherLote

--- a/SisMaper/Views/Style/Style.xaml
+++ b/SisMaper/Views/Style/Style.xaml
@@ -194,7 +194,10 @@
             Value="True" />
         <Setter
             Property="Foreground"
-            Value="#5095D6" />
+            Value="#aecce8" />
+        <Setter
+            Property="FontSize"
+            Value="13" />
         <Setter
             Property="Template">
             <Setter.Value>
