--- a/SisMaper/Views/Templates/LostConnection.xaml
+++ b/SisMaper/Views/Templates/LostConnection.xaml
@@ -5,19 +5,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:SisMaper.Views"
     mc:Ignorable="d"
     Title="LostConnection"
     ShowTitleBar="False"
     ResizeMode="NoResize"
-    ShowCloseButton="False" 
-    ShowMaxRestoreButton="False" 
+    ShowCloseButton="False"
+    ShowMaxRestoreButton="False"
     ShowMinButton="False"
     Height="250"
     Width="600"
     AllowsTransparency="True"
     WindowStartupLocation="CenterOwner">
-    <Grid Background="Transparent">
-        
-    </Grid>
+    <Grid
+        Background="Transparent" />
 </mah:MetroWindow>
