--- a/SisMaper/Views/Templates/MyPasswordBox.xaml
+++ b/SisMaper/Views/Templates/MyPasswordBox.xaml
@@ -1,10 +1,12 @@
-﻿<UserControl x:Name="userControl" x:Class="SisMaper.Views.Templates.MyPasswordBox"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:SisMaper.Views.Templates"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Name="userControl"
+    x:Class="SisMaper.Views.Templates.MyPasswordBox"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SisMaper.Views.Templates"
+    mc:Ignorable="d">
 
     <Grid>
         <PasswordBox
@@ -33,31 +35,79 @@
             Image="/Images/warning.png" />
     </UserControl.ToolTip>
     <UserControl.Resources>
-        <Style x:Key="TB" TargetType="{x:Type TextBox}">
-            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Control.Background}" />
-            <Setter Property="BorderBrush" Value="Gray" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="CaretBrush" Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
-            <Setter Property="ContextMenu" Value="{DynamicResource MahApps.TextBox.ContextMenu}" />
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Text}" />
-            <Setter Property="Padding" Value="4" />
-            <Setter Property="SelectionBrush" Value="{DynamicResource MahApps.Brushes.Highlight}" />
-            <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Style
+            x:Key="TB"
+            TargetType="{x:Type TextBox}">
+            <Setter
+                Property="Background"
+                Value="{DynamicResource MahApps.Brushes.Control.Background}" />
+            <Setter
+                Property="BorderBrush"
+                Value="Gray" />
+            <Setter
+                Property="VerticalContentAlignment"
+                Value="Center" />
+            <Setter
+                Property="BorderThickness"
+                Value="1" />
+            <Setter
+                Property="CaretBrush"
+                Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+            <Setter
+                Property="ContextMenu"
+                Value="{DynamicResource MahApps.TextBox.ContextMenu}" />
+            <Setter
+                Property="FontSize"
+                Value="16" />
+            <Setter
+                Property="Foreground"
+                Value="{DynamicResource MahApps.Brushes.Text}" />
+            <Setter
+                Property="Padding"
+                Value="4" />
+            <Setter
+                Property="SelectionBrush"
+                Value="{DynamicResource MahApps.Brushes.Highlight}" />
+            <Setter
+                Property="SnapsToDevicePixels"
+                Value="True" />
         </Style>
-        <Style x:Key="PB" TargetType="{x:Type PasswordBox}">
-            <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Control.Background}" />
-            <Setter Property="BorderBrush" Value="Gray" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="CaretBrush" Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
-            <Setter Property="ContextMenu" Value="{DynamicResource MahApps.TextBox.ContextMenu}" />
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.Text}" />
-            <Setter Property="Padding" Value="4" />
-            <Setter Property="SelectionBrush" Value="{DynamicResource MahApps.Brushes.Highlight}" />
-            <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Style
+            x:Key="PB"
+            TargetType="{x:Type PasswordBox}">
+            <Setter
+                Property="Background"
+                Value="{DynamicResource MahApps.Brushes.Control.Background}" />
+            <Setter
+                Property="BorderBrush"
+                Value="Gray" />
+            <Setter
+                Property="VerticalContentAlignment"
+                Value="Center" />
+            <Setter
+                Property="BorderThickness"
+                Value="1" />
+            <Setter
+                Property="CaretBrush"
+                Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+            <Setter
+                Property="ContextMenu"
+                Value="{DynamicResource MahApps.TextBox.ContextMenu}" />
+            <Setter
+                Property="FontSize"
+                Value="16" />
+            <Setter
+                Property="Foreground"
+                Value="{DynamicResource MahApps.Brushes.Text}" />
+            <Setter
+                Property="Padding"
+                Value="4" />
+            <Setter
+                Property="SelectionBrush"
+                Value="{DynamicResource MahApps.Brushes.Highlight}" />
+            <Setter
+                Property="SnapsToDevicePixels"
+                Value="True" />
         </Style>
     </UserControl.Resources>
 </UserControl>
